# chat_agent

./: API_SPECIFICATION.md  ARCHITECTURE.md  DATA_FLOW.md  Implementation_Plan.md  README.md  Task.md
back/: agent.py  main.py  pyproject.toml  requirements.txt
front/: index.html  package-lock.json
front/src/: App.css  App.jsx
front/src/components/: ChatForm.jsx  ChatIcon.jsx  ChatMessages.jsx
